# uestc-operation-system

./: README.md
os-section1/: CMakeLists.txt  main.c  philosopher.c  philosopher.h
os-section2/: CMakeLists.txt  buffer_pool.c  buffer_pool.h  consumer.c  consumer.h  main.c  producer.c  producer.h
os-section3/pipe/: main.c
os-section3/queue/: CMakeLists.txt  main.c
os-section4/: test.sh
os-section5/: usr_monitor.sh
os-section6/: CMakeLists.txt  cp  main.c
